# SeeSea

./: .gitignore  CMakeLists.txt  INIT.md  README.md  WIRING.md  koblingspunkter.txt  partitions.csv  run_monitor.sh  sdkconfig  sdkconfig.old  wiring_arduino_jrs.txt
JSN-SR20-Y1超声波测距资料/PC上位机测试软件/: param.txt
arduino_jsn_test/: arduino_jsn_test.ino
docs/: github.md  google_home.md  privacy_policy.txt  probe_polarity_check.txt  wiring_arduino_uno_jsn.txt
google/: .gitignore  README.md  secrets.template
google_local_app/: README.md  manifest.json  package.json  tsconfig.json
google_local_app/src/: index.ts
klage/: complaint_jsn_sr20_en.txt  complaint_jsn_sr20_summary.txt  klage_jsn_sr20.txt
main/: CMakeLists.txt  aht20_sensor.c  aht20_sensor.h  app_main.c  battery_monitor.c  bme280_sensor.c  config_store.c  display_manager.c  ds18b20_sensor.c  font5x7.inc  google_bridge.c  google_bridge.h  i2c_scan.c  i2c_scan.h  idf_component.yml  mqtt_bridge.c  power_manager.c  scheduler.c  sensor_manager.c  ultrasonic_sensor.c  web_server.c  wifi_manager.c
main/include/: battery_monitor.h  bme280_sensor.h  config_store.h  display_manager.h  ds18b20_sensor.h  mqtt_bridge.h  power_manager.h  scheduler.h  sensor_manager.h  ultrasonic_sensor.h  web_server.h  wifi_manager.h
